--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.11.5",
     "react-router-dom": "^6.23.0",
     "reflect-metadata": "^0.2.2",
+    "stripe": "^15.5.0",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20"
   },
