--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "pg": "^8.11.5",
     "react": "^18.3.1",
