--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "pdfkit": "^0.15.0",
     "pg": "^8.11.5",
     "react-router-dom": "^6.23.0",
     "reflect-metadata": "^0.2.2",
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.8",
+    "@types/pdfkit": "^0.13.4",
     "@types/pg": "^8.11.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^8.57.0",
